--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>gs-ui-swing</artifactId>
             <version>2.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.graphstream</groupId>
+            <artifactId>gs-algo</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 
 
