--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>gs-algo</artifactId>
             <version>2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
