Updating POM.xml

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,16 @@
                         <configuration>
                             <outputDirectory>${basedir}</outputDirectory>
                             <finalName>scheduler</finalName>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
                             <archive>
                                 <manifest>
                                     <mainClass>Main</mainClass>
