--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>cloning</artifactId>
             <version>1.10.3</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
 
